--- a/tasks/users/linger.yml
+++ b/tasks/users/linger.yml
@@ -7,6 +7,7 @@
     cmd: loginctl show-user {{ system_user.name }} --property=Linger
   register: result
   changed_when: false
+  check_mode: false
   failed_when: |
     result.rc > 0
     and
