Firewall logging switch

--- a/defaults/main/firewall.yml
+++ b/defaults/main/firewall.yml
@@ -1,5 +1,6 @@
 ---
 system_firewall_default_zone: public
+system_firewall_log: true
 system_firewall_public_interface: "{{ ansible_default_ipv4.interface }}"
 
 system_firewall_rules:
