--- a/tasks/firewall.yml
+++ b/tasks/firewall.yml
@@ -9,6 +9,7 @@
         enabled: true
 
     - name: Firewall - Logging for denied packets
+      when: system_firewall_log
       ansible.builtin.lineinfile:
         path: /etc/firewalld/firewalld.conf
         line: LogDenied=all
