--- a/handlers/time.yml
+++ b/handlers/time.yml
@@ -6,8 +6,6 @@
   ansible.builtin.service:
     name: "{{ service }}"
     state: restarted
-  vars:
-    services: "{{ time_backend.services | map('extract', system_services_dict) }}"
-  loop: "{{ services | default(time_backend.services) | flatten }}"
+  with_service: "{{ time_backend.services }}"
   loop_control:
     loop_var: service
