--- a/molecule/gnome/molecule.yml
+++ b/molecule/gnome/molecule.yml
@@ -19,26 +19,28 @@ platforms:
       - "storage :file, bus: 'virtio', cache: 'writeback'"
     instance_raw_config_args:
       - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
-  - name: gentoo
-    box: generic-x64/gentoo
-    cpus: 4
-    memory: 8192
-    provider_raw_config_args:
-      - "cpu_mode = 'host-passthrough'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
+  # Very very long build due to old box
+  # - name: gentoo
+  #   box: generic-x64/gentoo
+  #   cpus: 4
+  #   memory: 8192
+  #   provider_raw_config_args:
+  #     - "cpu_mode = 'host-passthrough'"
+  #     - "nic_model_type = 'virtio'"
+  #     - "video_type = 'virtio'"
+  #     - "disk_driver :cache => 'writeback'"
+  #     - "storage :file, bus: 'virtio', cache: 'writeback'"
 
   # Debian like
   - name: bookworm
     box: debian/bookworm64
     memory: 2048
     provider_raw_config_args: *provider_raw_config
-  - name: noble
-    box: generic/ubuntu2404
-    memory: 2048
-    provider_raw_config_args: *provider_raw_config
+  # Commented temporarily due to broken box
+  # - name: noble
+  #   box: generic/ubuntu2404
+  #   memory: 2048
+  #   provider_raw_config_args: *provider_raw_config
 
   # RedHat like
   - name: centos9s
