--- a/tasks/package-managers/portage/configure.yml
+++ b/tasks/package-managers/portage/configure.yml
@@ -22,44 +22,13 @@
     - portdir
     - profile
     - repos
+    - equery
     - make.conf
+    - profile/upgrade
   loop_control:
     loop_var: portage_task
 
-- name: Become root
+- name: Portage - Configure - Ensure git is installed
   become: true
-  block:
-    - name: Portage - Configuration files
-      ansible.builtin.template:
-        src: portage/package.use/{{ file }}.j2
-        dest: /etc/portage/package.use/{{ file }}
-        group: portage
-        mode: "0664"
-      loop:
-        - firewalld
-        - kernel
-        - libreoffice
-        - lvm2
-      loop_control:
-        loop_var: file
-      notify: emerge --newuse
-
-    - name: Portage - Configure - Kernel licenses
-      become: true
-      ansible.builtin.template:
-        src: portage/package.license/kernels.j2
-        dest: /etc/portage/package.license/kernels
-        group: portage
-        mode: "0664"
-
-    - name: Packages - Profiles - Gnome
-      when: "'gnome' in current_profiles_keys"
-      ansible.builtin.lineinfile:
-        path: /etc/conf.d/display-manager
-        line: DISPLAYMANAGER="gdm"
-        regexp: ^DISPLAYMANAGER=
-        create: true
-        group: portage
-        mode: "0664"
-      notify:
-        - restart display-manager
+  community.general.portage:
+    package: dev-vcs/git
