--- a/molecule/switches/molecule.yml
+++ b/molecule/switches/molecule.yml
@@ -1,1 +1,102 @@
-../default/molecule.yml
+---
+dependency:
+  name: galaxy
+driver:
+  name: vagrant
+  provider:
+    name: libvirt
+  provision: true
+platforms:
+  - name: archlinux
+    box: archlinux/archlinux
+    provider_raw_config_args: &raw_config
+      - "cpu_mode = 'host-passthrough'"
+      - "disk_bus = 'virtio'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
+    instance_raw_config_args:
+      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
+  - name: gentoo
+    box: generic-x64/gentoo
+    cpus: 4
+    memory: 8192
+    provider_raw_config_args:
+      - "cpu_mode = 'host-passthrough'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
+
+  # Debian like
+  - name: bullseye  # EOL 2026-08-31
+    box: debian/bullseye64
+    groups:
+      - debian_like
+      - debian
+    provider_raw_config_args: *raw_config
+  - name: bookworm
+    box: debian/bookworm64
+    groups:
+      - debian_like
+      - debian
+    provider_raw_config_args: *raw_config
+  - name: trixie
+    box: debian/testing64
+    groups:
+      - debian_like
+      - debian
+    provider_raw_config_args: *raw_config
+  - name: focal                              # EOL 2025-04-02
+    box: cloud-image/ubuntu-20.04
+    groups:
+      - debian_like
+      - ubuntu
+    memory: 2048
+    provider_raw_config_args: *raw_config
+  - name: jammy
+    box: cloud-image/ubuntu-22.04
+    groups:
+      - debian_like
+      - ubuntu
+    memory: 2048
+    provider_raw_config_args: *raw_config
+  - name: noble
+    box: cloud-image/ubuntu-24.04
+    groups:
+      - debian_like
+      - ubuntu
+    memory: 2048
+    provider_raw_config_args: *raw_config
+
+  # RedHat like
+  - name: centos9s
+    box: generic-x64/centos9s
+    groups:
+      - redhat_like
+    memory: 2048
+    provider_raw_config_args: *raw_config
+  - name: alma9
+    box: generic-x64/alma9
+    groups:
+      - redhat_like
+    memory: 2048
+    provider_raw_config_args: *raw_config
+  - name: fedora39
+    box: fedora/39-cloud-base
+    groups:
+      - redhat_like
+    memory: 2048
+    provider_raw_config_args: *raw_config
+  - name: fedora40
+    box: fedora/40-cloud-base
+    groups:
+      - redhat_like
+    memory: 2048
+    provider_raw_config_args: *raw_config
+lint: ansible-lint
+provisioner:
+  name: ansible
+verifier:
+  name: ansible
