--- a/tasks/package-managers/portage/profile.yml
+++ b/tasks/package-managers/portage/profile.yml
@@ -1,36 +1,10 @@
 ---
-- name: Portage - Profile - Check for profiles directory
-  ansible.builtin.stat:
-    path: "{{ system_portage_directory }}/profiles"
-  register: dir
-
-- name: Portage - Profile - Manual emerge sync
-  when: not dir.stat.exists
-  become: true
-  ansible.builtin.command:
-    cmd: emerge --sync
-  register: sync
-  changed_when: sync.stdout | regex_search('Number of files. (\\d+)', '\\1') | first | int > 1
-
-- name: Portage - Profile - Check for broken link
-  ansible.builtin.stat:
-    path: /etc/portage/make.profile
-    follow: true
-  register: link
-
-- name: Portage - Profile - Force to default profile
-  when: not link.stat.exists
-  become: true
-  ansible.builtin.file:
-    src: |-
-      {{
-        '../..' + system_portage_directory +
-        '/profiles/default/linux/amd64/23.0/no-multilib' +
-        ('/systemd' if ansible_service_mgr == 'systemd' else '')
-      }}
-    dest: /etc/portage/make.profile
-    state: link
-    force: true
-    follow: false
-  notify:
-    - emerge --newuse
+- name: Portage - Profile - Tasks sequence
+  ansible.builtin.include_tasks:
+    file: "{{ role_path }}/tasks/package-managers/portage/profile/{{ portage_profile_task }}.yml"
+  loop:
+    - sync
+    - facts
+    - link
+  loop_control:
+    loop_var: portage_profile_task
