Fix some tags and timesyncd service name

--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -1,4 +1,8 @@
 ---
+- name: Networks - Load variables
+  when: default_network_backend_name is undefined
+  ansible.builtin.include_tasks: "{{ role_path }}/tasks/facts.yml"
+
 - name: Hosts - Local hostname
   become: true
   ansible.builtin.hostname:
@@ -6,7 +10,7 @@
   notify: restart hostname
 
 - name: Hosts - Fix localhost fqdn detection
-  when: network_backend_name == "networkd"
+  when: network_backend_name == "systemd-networkd"
   become: true
   ansible.builtin.lineinfile:
     path: /etc/nsswitch.conf
