Fix user append on empty group

--- a/tasks/users.yml
+++ b/tasks/users.yml
@@ -37,7 +37,7 @@
     - name: Users
       ansible.builtin.user:
         name: "{{ user.name }}"
-        append: "{{ user.append | default(true) }}"
+        append: "{{ user.append | default(omit) }}"
         comment: "{{ user.comment | default(omit) }}"
         create_home: "{{ user.create_home | default(omit) }}"
         expires: "{{ user.expires | default(omit) }}"
