--- a/molecule/reboot-only/molecule.yml
+++ b/molecule/reboot-only/molecule.yml
@@ -18,17 +18,16 @@ platforms:
       - "storage :file, bus: 'virtio', cache: 'writeback'"
     instance_raw_config_args:
       - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
-  # Very very long build due to old box
-  # - name: gentoo
-  #   box: generic-x64/gentoo
-  #   cpus: 4
-  #   memory: 8192
-  #   provider_raw_config_args:
-  #     - "cpu_mode = 'host-passthrough'"
-  #     - "nic_model_type = 'virtio'"
-  #     - "video_type = 'virtio'"
-  #     - "disk_driver :cache => 'writeback'"
-  #     - "storage :file, bus: 'virtio', cache: 'writeback'"
+  - name: gentoo
+    box: generic-x64/gentoo
+    cpus: 4
+    memory: 8192
+    provider_raw_config_args:
+      - "cpu_mode = 'host-passthrough'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
 
   # Debian like
   - name: bullseye  # EOL 2026-08-31
