--- a/tasks/packages/after-install.yml
+++ b/tasks/packages/after-install.yml
@@ -1,18 +1,4 @@
 ---
-- name: Packages - After install - Package manager based rules
-  vars:
-    task_file: "{{ role_path }}/tasks/packages/{{ ansible_pkg_mgr }}/after-install.yml"
-  when: task_file is file
-  ansible.builtin.include_tasks:
-    file: "{{ task_file }}"
-
-- name: Packages - After install - Distro family based rules
-  vars:
-    task_file: "{{ role_path }}/tasks/packages/{{ ansible_os_family | lower }}-like/after-install.yml"
-  when: task_file is file
-  ansible.builtin.include_tasks:
-    file: "{{ task_file }}"
-
 - name: Packages - Services - Show the list
   ansible.builtin.debug:
     var: system_services
@@ -27,3 +13,8 @@
   loop: "{{ system_services }}"
   loop_control:
     loop_var: service
+
+- name: Packages - Trigger a reboot if needed
+  when: not in_container
+  ansible.builtin.include_tasks:
+    file: "{{ role_path }}/tasks/reboot.yml"
