--- a/tasks/package-managers/needs-update.yml
+++ b/tasks/package-managers/needs-update.yml
@@ -3,12 +3,12 @@
   become: true
   ansible.builtin.template:
     src: needs-update.j2
-    dest: "{{ system_bin_path }}/needs-update"
+    dest: "{{ system_scripts_path }}/needs-update"
     mode: "0755"
 
 - name: Package managers - Needs update - Detect the need of a refresh
   ansible.builtin.command:
-    cmd: "{{ system_bin_path }}/needs-update"
+    cmd: "{{ system_scripts_path }}/needs-update"
   register: result
   failed_when: result.rc > 1
   changed_when: false
