--- a/tasks/packages/portage/after-install.yml
+++ b/tasks/packages/portage/after-install.yml
@@ -90,59 +90,14 @@
               loop_control:
                 loop_var: kernel_version
 
-    - name: Portage - Installed/updated packages since the last boot
-      ansible.builtin.command:
-        cmd: "awk -F ':  [=>:]{3} ' '/completed emerge/ { if ($1 >= {{ system_uptime }}) { print $2 } }' /var/log/emerge.log"
-      changed_when: false
-      check_mode: false
-      register: installed
+    - name: Portage - Installed/updated packages during this boot
+      ansible.builtin.include_tasks:
+        file: "{{ role_path }}/tasks/packages/portage/installed-this-boot.yml"
 
     # If cpuid2cpuflags has been updated, its output may change now so we have to
     # update /etc/portage/make.conf as well and rebuild the impacted packages if
     # required.
     - name: Portage - CPU flags
-      when: "'app-portage/cpuid2cpuflags' in installed.stdout"
+      when: "'app-portage/cpuid2cpuflags' in installed_this_boot.stdout"
       ansible.builtin.include_tasks:
         file: "{{ role_path }}/tasks/package-managers/portage/make.conf.yml"
-
-    - name: Portage - Grub
-      vars:
-        has_changed: "{{ 'sys-boot/grub' in installed.stdout }}"
-      ansible.builtin.debug:
-        msg: |-
-          {{
-            has_changed | ternary(
-              "Grub has changed",
-              "Grub hasn't changed"
-            )
-          }}
-      changed_when: has_changed
-      notify: grub-install
-
-    - name: Portage - Service manager
-      vars:
-        has_changed: "{{ ('sys-apps/' + ansible_service_mgr) in installed.stdout }}"
-      ansible.builtin.debug:
-        msg: |-
-          {{
-            has_changed | ternary(
-              ansible_service_mgr + " has changed",
-              ansible_service_mgr + " hasn't changed"
-            )
-          }}
-      changed_when: has_changed
-      notify: reboot
-
-    - name: Portage - Glibc
-      vars:
-        has_changed: "{{ 'sys-libs/glibc' in installed.stdout }}"
-      ansible.builtin.debug:
-        msg: |-
-          {{
-            has_changed | ternary(
-              "Glibc has changed",
-              "Glibc hasn't changed"
-            )
-          }}
-      changed_when: has_changed
-      notify: reload init system
