--- a/molecule/servers/molecule.yml
+++ b/molecule/servers/molecule.yml
@@ -11,22 +11,23 @@ driver:
     name: libvirt
   provision: true
 platforms:
-  - name: archlinux
-    box: archlinux/archlinux
-    interfaces: &interfaces
-      - auto_config: false
-        network_name: private_network
-        type: dhcp
-    provider_raw_config_args: &provider_raw_config
-      - "cpu_mode = 'host-passthrough'"
-      - "disk_bus = 'virtio'"
-      - "nic_model_type = 'virtio'"
-      - "video_type = 'virtio'"
-      - "disk_driver :cache => 'writeback'"
-      - "storage :file, bus: 'virtio', cache: 'writeback'"
-    instance_raw_config_args:
-      - 'vm.disk :disk, size: "1GB", name: "vdb"'
-      - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
+  # Revoked
+  # - name: archlinux
+  #   box: archlinux/archlinux
+  #   interfaces: &interfaces
+  #     - auto_config: false
+  #       network_name: private_network
+  #       type: dhcp
+  #   provider_raw_config_args: &provider_raw_config
+  #     - "cpu_mode = 'host-passthrough'"
+  #     - "disk_bus = 'virtio'"
+  #     - "nic_model_type = 'virtio'"
+  #     - "video_type = 'virtio'"
+  #     - "disk_driver :cache => 'writeback'"
+  #     - "storage :file, bus: 'virtio', cache: 'writeback'"
+  #   instance_raw_config_args:
+  #     - 'vm.disk :disk, size: "1GB", name: "vdb"'
+  #     - 'vm.provision :shell, inline: "pacman -Sy --noconfirm git net-tools python3 sudo unzip which"'
 
   # Very very long build due to old box
   # - name: gentoo
@@ -50,11 +51,20 @@ platforms:
     groups:
       - debian_like
       - debian
-    interfaces: *interfaces
-    provider_raw_config_args: *provider_raw_config
+    interfaces: &interfaces
+      - auto_config: false
+        network_name: private_network
+        type: dhcp
+    provider_raw_config_args: &provider_raw_config
+      - "cpu_mode = 'host-passthrough'"
+      - "disk_bus = 'virtio'"
+      - "nic_model_type = 'virtio'"
+      - "video_type = 'virtio'"
+      - "disk_driver :cache => 'writeback'"
+      - "storage :file, bus: 'virtio', cache: 'writeback'"
     instance_raw_config_args: &instance_raw_config
       - 'vm.disk :disk, size: "1GB", name: "vdb"'
-  - name: bookworm
+  - name: bookworm  # EOL 2028-06-10
     box: debian/bookworm64
     groups:
       - debian_like
@@ -70,7 +80,7 @@ platforms:
     interfaces: *interfaces
     provider_raw_config_args: *provider_raw_config
     instance_raw_config_args: *instance_raw_config
-  - name: jammy
+  - name: jammy     # EOL 2027-04-01
     box: cloud-image/ubuntu-22.04
     groups:
       - debian_like
@@ -79,19 +89,18 @@ platforms:
     interfaces: *interfaces
     provider_raw_config_args: *provider_raw_config
     instance_raw_config_args: *instance_raw_config
-  # Commented temporarily due to broken box
-  # - name: noble
-  #   box: cloud-image/ubuntu-24.04
-  #   groups:
-  #     - debian_like
-  #     - ubuntu
-  #   memory: 2048
-  #   interfaces: *interfaces
-  #   provider_raw_config_args: *provider_raw_config
-  #   instance_raw_config_args: *instance_raw_config
+  - name: noble     # EOL 2029-04-25
+    box: alvistack/ubuntu-24.04
+    groups:
+      - debian_like
+      - ubuntu
+    memory: 2048
+    interfaces: *interfaces
+    provider_raw_config_args: *provider_raw_config
+    instance_raw_config_args: *instance_raw_config
 
   # RedHat like
-  - name: centos9s
+  - name: centos9s  # EOL 2027-05-31
     box: generic-x64/centos9s
     groups:
       - redhat_like
@@ -99,7 +108,15 @@ platforms:
     interfaces: *interfaces
     provider_raw_config_args: *provider_raw_config
     instance_raw_config_args: *instance_raw_config
-  - name: alma9
+  # - name: centos10s  # EOL 2027-05-31
+  #   box: alvistack/centos-10-stream
+  #   groups:
+  #     - redhat_like
+  #   memory: 2048
+  #   interfaces: *interfaces
+  #   provider_raw_config_args: *provider_raw_config
+  #   instance_raw_config_args: *instance_raw_config
+  - name: alma9     # EOL 2027-05-31
     box: generic-x64/alma9
     groups:
       - redhat_like
@@ -107,16 +124,16 @@ platforms:
     interfaces: *interfaces
     provider_raw_config_args: *provider_raw_config
     instance_raw_config_args: *instance_raw_config
-  - name: fedora39
-    box: fedora/39-cloud-base
+  - name: fedora41  # EOL 2025-11-19
+    box: fedora/41-cloud-base
     groups:
       - redhat_like
     memory: 2048
     interfaces: *interfaces
     provider_raw_config_args: *provider_raw_config
     instance_raw_config_args: *instance_raw_config
-  - name: fedora40
-    box: fedora/40-cloud-base
+  - name: fedora42  # EOL 2026-05-13
+    box: alvistack/fedora-42
     groups:
       - redhat_like
     memory: 2048
