--- a/molecule/containers/molecule.yml
+++ b/molecule/containers/molecule.yml
@@ -45,14 +45,10 @@ platforms:
     image: gwerlas/ansible-guest-almalinux:9
     pre_build_mage: true
     volumes: *volumes
-  - name: fedora40
-    image: gwerlas/ansible-guest-fedora:40
-    pre_build_mage: true
-    volumes: *volumes
-  - name: fedora41
-    image: gwerlas/ansible-guest-fedora:41
-    pre_build_mage: true
-    volumes: *volumes
+  # - name: fedora41
+  #   image: gwerlas/ansible-guest-fedora:41
+  #   pre_build_mage: true
+  #   volumes: *volumes
 lint: ansible-lint
 provisioner:
   name: ansible
