Fix host IP detection in /etc/hosts

--- a/tasks/hosts.yml
+++ b/tasks/hosts.yml
@@ -64,7 +64,7 @@
       ansible.builtin.lineinfile:
         path: /etc/hosts
         line: "{{ '{:<15}'.format(host.ip) }} {{ host.names | join(' ') }}"
-        regexp: "^{{ host.ip | regex_escape }} "
+        regexp: "^{{ host.ip | regex_escape }}\\s"
       loop: "{{ etc_hosts }}"
       loop_control:
         loop_var: host
